compiler/testData/asJava/lightClasses/compilationErrors/JvmPackageName.kt
// a.b.c.B
@file:JvmPackageName("a.b.c")
package p

class B {
    fun f(j: Int) = j

    fun g(c: C) = c
}

class C